Revelation changelog

---------------[ xxxx-xx-xx : 0.4.5 ]---------------

2005-08-24  Erik Grinaker <erikg@codepoet.no>

	* added GPass 0.5.x export

2005-08-23  Erik Grinaker <erikg@codepoet.no>

	* more informative error messages for gnomemisc module

	* check for necessary python modules at configure-time

	* improved the applet name and description

	* added GPass 0.5.x import

2005-08-22  Erik Grinaker <erikg@codepoet.no>

	* added Password Safe 1.x import/export

	* added Password Safe 2.x import/export

	* trimmed labels for doubleclick settings

	* added Password Gorilla import/export

	* added MyPasswordSafe import/export

	* fix crashes in applet and with drag/drop on 64-bit systems

2005-08-17  Erik Grinaker <erikg@codepoet.no>

	* default lock timeout for applet set to 10 minutes

	* don't use unnecessary defsfiles when building gnomemisc module

	* encode data as Unicode when loading from files

	* fix crash when searching with non-Unicode locale

2005-08-09  Erik Grinaker <erikg@codepoet.no>

	* fix incorrect magic string in MIME-type entry

	* set correct app version in datafile header

	* bumped version number to 0.4.5

---------------[ 2005-08-07 : 0.4.4 ]---------------

2005-08-06  Erik Grinaker <erikg@codepoet.no>

	* moved unique dialog system to dialog module

	* implemented unique dialog system in main app

	* properly quote autoconf macro names

	* use pyexecdir instead of pythondir in applet

	* made wrapping of panel_applet_request_focus() conditional

	* applet focus tweaks

	* return correct status code for config schema install

	* clear gconf cache before re-checking config values

2005-08-05  Erik Grinaker <erikg@codepoet.no>

	* the UIManager wrapper now respects is-important attributes

	* added option for setting the toolbar style

	* added an applet icon for locked file

	* reordered options in applet prefs

	* improved focus behavior of search entries

	* reverted changes to password checker dialog
